style.css
:root {
    --font: #54422b;
    --mainBackground: #f1f2e0;
    --footer: #cac6b2;
    --leftBackground: #a29a85;
    --buttons: #cac6b2;
}

/* FOR JS */
.row {
    box-sizing: border-box;
    border-top: 1px solid var(--footer);
    border-bottom: 1px solid var(--footer);
    display: flex;
}
.box {
    box-sizing: border-box;
    border-left: 1px solid var(--footer);
    border-right: 1px solid var(--footer);
    flex: 1;
}

/* Base reset and layout */
html, body {
    margin: 0;
    padding: 0;
    height: 100%;
}
body {
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    font-family: "Pixelify Sans", sans-serif;
}

/* MAIN */
.main {
    flex: 1;
    width: 100%;
    background-color: var(--mainBackground);
    display: flex;
    justify-content: space-evenly;
    align-items: flex-start;
    overflow: hidden;
}

/* Left panel */
.sketchOptionsContainer {
    width: 20dvw;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    background-color: var(--leftBackground);
}
.leftButton {
    cursor: pointer;
    border: #222222 solid 1px;
    aspect-ratio: 3/1;
    width: 70%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--font);
    font-family: "Pixelify Sans", sans-serif;
    font-size: 24px;
    font-weight: 700;
    font-style: normal;
    background-color: var(--buttons);
    box-shadow: 5px 5px #222222;
}

/* Sketch board */
.sketchBoardContainer {
    width: 50dvw;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.sketchBoard {
    aspect-ratio: 1 / 1;
    width: 90%;
    max-width: 825px;
    background-color: white;
    box-shadow: var(--font) 10px 10px;
}
.instruction {
    margin-top: 15px;
    color: var(--font);
    font-size: 20px;
    font-weight: 700;
}

/* Right panel */
.miscOptionsContainer {
    width: 30dvw;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: flex-end;
}
.referenceImageContainer {
    height: 70%;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
}
.referenceImage {
    background-color: white;
    aspect-ratio: 1/1;
    width: 95%;
    box-sizing: border-box;
    border: var(--font) 1px solid;
    margin: 25px 0;
    box-shadow: #222222 10px 10px;
}
.uploadButton {
    align-self: flex-end;
    margin: 0 25px;
    cursor: pointer;
    border: var(--font) solid 1px;
    aspect-ratio: 3/1;
    width: 40%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--font);
    font-size: 24px;
    font-weight: 700;
    background-color: var(--buttons);
    box-shadow: 5px 5px #222222;
}
.downloadButtonContainer {
    height: 30%;
    width: 100%;
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
}
.downloadButton {
    cursor: pointer;
    border: var(--font) solid 1px;
    aspect-ratio: 3/1;
    width: 40%;
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--font);
    font-size: 24px;
    font-weight: 700;
    background-color: var(--buttons);
    box-shadow: 5px 5px #222222;
    margin: 25px;
}

/* FOOTER */
.footer {
    height: 60px;
    width: 100%;
    background-color: var(--footer);
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}
.footerText {
    color: var(--font);
    font-size: 24px;
    font-weight: 700;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}
.githubIcon {
    margin-left: auto;
    margin-right: 10px;
    font-size: 34px;
    color: var(--font);
    cursor: pointer;
}

